Move methods only used by MetricsReporter out of DockerHostCapacity