@@ -3,7 +3,6 @@ package com.yahoo.vespa.hosted.provision.provisioning;
 
 import com.yahoo.config.provision.Flavor;
 import com.yahoo.config.provision.NodeFlavors;
-import com.yahoo.config.provision.NodeResources;
 import com.yahoo.config.provision.NodeType;
 import com.yahoo.vespa.hosted.provision.LockedNodeList;
 import com.yahoo.vespa.hosted.provision.Node;
@@ -11,7 +10,6 @@ import org.junit.Before;
 import org.junit.Test;
 
 import java.util.ArrayList;
-import java.util.Collections;
 import java.util.LinkedHashSet;
 import java.util.List;
 import java.util.Optional;
@@ -39,35 +37,24 @@ public class DockerHostCapacityTest {
         flavorDocker2 = nodeFlavors.getFlavorOrThrow("docker2");
 
         // Create three docker hosts
-        host1 = Node.create("host1", Collections.singleton("::1"), generateIPs(2, 4), "host1", Optional.empty(), Optional.empty(), nodeFlavors.getFlavorOrThrow("host"), NodeType.host);
-        host2 = Node.create("host2", Collections.singleton("::11"), generateIPs(12, 3), "host2", Optional.empty(), Optional.empty(), nodeFlavors.getFlavorOrThrow("host"), NodeType.host);
-        host3 = Node.create("host3", Collections.singleton("::21"), generateIPs(22, 1), "host3", Optional.empty(), Optional.empty(), nodeFlavors.getFlavorOrThrow("host"), NodeType.host);
+        host1 = Node.create("host1", Set.of("::1"), generateIPs(2, 4), "host1", Optional.empty(), Optional.empty(), nodeFlavors.getFlavorOrThrow("host"), NodeType.host);
+        host2 = Node.create("host2", Set.of("::11"), generateIPs(12, 3), "host2", Optional.empty(), Optional.empty(), nodeFlavors.getFlavorOrThrow("host"), NodeType.host);
+        host3 = Node.create("host3", Set.of("::21"), generateIPs(22, 1), "host3", Optional.empty(), Optional.empty(), nodeFlavors.getFlavorOrThrow("host"), NodeType.host);
 
         // Add two containers to host1
-        var nodeA = Node.create("nodeA", Collections.singleton("::2"), Collections.emptySet(), "nodeA", Optional.of("host1"), Optional.empty(), flavorDocker, NodeType.tenant);
-        var nodeB = Node.create("nodeB", Collections.singleton("::3"), Collections.emptySet(), "nodeB", Optional.of("host1"), Optional.empty(), flavorDocker, NodeType.tenant);
+        var nodeA = Node.create("nodeA", Set.of("::2"), Set.of(), "nodeA", Optional.of("host1"), Optional.empty(), flavorDocker, NodeType.tenant);
+        var nodeB = Node.create("nodeB", Set.of("::3"), Set.of(), "nodeB", Optional.of("host1"), Optional.empty(), flavorDocker, NodeType.tenant);
 
         // Add two containers to host 2 (same as host 1)
-        var nodeC = Node.create("nodeC", Collections.singleton("::12"), Collections.emptySet(), "nodeC", Optional.of("host2"), Optional.empty(), flavorDocker, NodeType.tenant);
-        var nodeD = Node.create("nodeD", Collections.singleton("::13"), Collections.emptySet(), "nodeD", Optional.of("host2"), Optional.empty(), flavorDocker, NodeType.tenant);
+        var nodeC = Node.create("nodeC", Set.of("::12"), Set.of(), "nodeC", Optional.of("host2"), Optional.empty(), flavorDocker, NodeType.tenant);
+        var nodeD = Node.create("nodeD", Set.of("::13"), Set.of(), "nodeD", Optional.of("host2"), Optional.empty(), flavorDocker, NodeType.tenant);
 
         // Add a larger container to host3
-        var nodeE = Node.create("nodeE", Collections.singleton("::22"), Collections.emptySet(), "nodeE", Optional.of("host3"), Optional.empty(), flavorDocker2, NodeType.tenant);
+        var nodeE = Node.create("nodeE", Set.of("::22"), Set.of(), "nodeE", Optional.of("host3"), Optional.empty(), flavorDocker2, NodeType.tenant);
 
         // init docker host capacity
-        nodes = new ArrayList<>();
-        Collections.addAll(nodes, host1, host2, host3, nodeA, nodeB, nodeC, nodeD, nodeE);
+        nodes = new ArrayList<>(List.of(host1, host2, host3, nodeA, nodeB, nodeC, nodeD, nodeE));
         capacity = new DockerHostCapacity(new LockedNodeList(nodes, () -> {}));
-    }
-
-    @Test
-    public void compare_used_to_sort_in_decending_order() {
-        assertEquals(host1, nodes.get(0)); // Make sure it is unsorted here
-
-        Collections.sort(nodes, capacity::compare);
-        assertEquals(host3, nodes.get(0));
-        assertEquals(host1, nodes.get(1));
-        assertEquals(host2, nodes.get(2));
     }
 
     @Test
@@ -80,7 +67,7 @@ public class DockerHostCapacityTest {
         assertFalse(capacity.hasCapacity(host3, flavorDocker2.resources())); // No ip available
 
         // Add a new node to host1 to deplete the memory resource
-        Node nodeF = Node.create("nodeF", Collections.singleton("::6"), Collections.emptySet(),
+        Node nodeF = Node.create("nodeF", Set.of("::6"), Set.of(),
                 "nodeF", Optional.of("host1"), Optional.empty(), flavorDocker, NodeType.tenant);
         nodes.add(nodeF);
         capacity = new DockerHostCapacity(new LockedNodeList(nodes, () -> {}));
@@ -93,34 +80,6 @@ public class DockerHostCapacityTest {
         assertEquals(2, capacity.freeIPs(host1));
         assertEquals(1, capacity.freeIPs(host2));
         assertEquals(0, capacity.freeIPs(host3));
-    }
-
-    @Test
-    public void getCapacityTotal() {
-        NodeResources total = capacity.getCapacityTotal(NodeResources.DiskSpeed.any);
-        assertEquals(21.0, total.vcpu(), 0.1);
-        assertEquals(30.0, total.memoryGb(), 0.1);
-        assertEquals(36.0, total.diskGb(), 0.1);
-    }
-
-    @Test
-    public void getFreeCapacityTotal() {
-        NodeResources totalFree = capacity.getFreeCapacityTotal(NodeResources.DiskSpeed.any);
-        assertEquals(15.0, totalFree.vcpu(), 0.1);
-        assertEquals(14.0, totalFree.memoryGb(), 0.1);
-        assertEquals(24.0, totalFree.diskGb(), 0.1);
-    }
-
-    @Test
-    public void freeCapacityInFlavorEquivalence() {
-        assertEquals(2, capacity.freeCapacityInFlavorEquivalence(flavorDocker));
-        assertEquals(2, capacity.freeCapacityInFlavorEquivalence(flavorDocker2));
-    }
-
-    @Test
-    public void getNofHostsAvailableFor() {
-        assertEquals(2, capacity.getNofHostsAvailableFor(flavorDocker));
-        assertEquals(2, capacity.getNofHostsAvailableFor(flavorDocker2));
     }
 
     private Set<String> generateIPs(int start, int count) {
